--- a/README
+++ b/README
@@ -1,13 +1,60 @@
 
-The Buildroot parallel builder or br-pbuilder for short is an utility that
-builds packages in parallel using an acyclic graph organized according to the
-packages dependencies.
+This program is intended for being executed inside Buildroot for building packages in parallel.
+The task is accomplished using a graph organized in levels. Each node of the graph represents a package to be built and each level contains all the nodes (packages) whose dependencies are nodes of higher level.
 
-The graph is created in levels, the graph's root is a package that does not have
-any dependency on any package. The second level contains packages whose only
-dependency is the graph's root that is the previous level; the third level
-contains packages whose dependencies are the packages in the second level and
-the graph's root; and so on.
+The graph's root is a package that does not have any dependency on any package and this is the first level. The second level contains packages whose only dependency is the graph's root; the third level contains packages whose dependencies are the packages in the second and first levels; and so on.
+
+This example shows a graph organization. Level 1 is considered the highest level.
+Node A is the graph's root, it doesn't have any dependency; therefore is level 1.
+Nodes B and C depend only of node A; therefore are level 2.
+Node D depends on nodes A and B; therefore is level 3, but also nodes E and F are in the same level since their only dependency is node C that is level 2.
+Node G depends on node D that is level 3 and node C that is level 2, since node D is the lowest level, node G must be level 4.
+Node H depends on nodes E and F that are level 3 and node C that is level 2, since nodes E and F are the lowest level, node H must be level 4.
+
+
+                      ####
+                     #    #
+                     #  A #                              Level 1
+                     #    #
+                      ####
+                        |
+          -----+--------+---------
+          |    |                  |
+        ####   |                ####
+       #    #  |               #    #
+       #  B #  |               #  C #                    Level 2
+       #    #  |               #    #
+        ####   |                ####
+          |    |                  |
+          +----'  -------+--------+------+------
+          |       |      |               |     |
+        ####      |    ####            ####    |
+       #    #     |   #    #          #    #   |
+       #  D #     |   #  E #          #  F #   |        Level 3
+       #    #     |   #    #          #    #   |
+        ####      |    ####            ####    |
+          |       |      |               |     |
+          +--------      ----------------+------
+          |                              |
+        ####                           ####
+       #    #                         #    #
+       #  G #                         #  H #            Level 4
+       #    #                         #    #
+        ####                           ####
+
+This table summarizes the packages names, their dependencies and their levels:
+
+Package -> Dependencies -> Level
+   A           None          1
+   B           A             2
+   C           A             2
+   D           A, B          3
+   E           C             3
+   F           C             3
+   G           C, D          4
+   H           C, E, F       4
+
+
 Each package may have one or more dependencies and all of them must be in higher
 levels.
 
@@ -15,19 +62,40 @@ levels.
 Building
 ================================================================================
 
-./autogen.sh
-./configure
-make
+The recommended method is to build it and use it directly inside Buildroot,
+see the next section.
+
+For building it separately as a normal program use the standard procedure:
+
+$ ./autogen.sh
+$ ./configure
+$ make
+
+The result is a binary in src/ called pbuilder
 
 ================================================================================
 How to use it
 ================================================================================
 
+$ cd br-pbuilder
+$ ./scripts/install.sh -b <buildroot_path>
+
+where <buildroot_path> is the path to Buildroot top directory.
+This script creates symlinks inside the Buildroot sources and patches its main
+Makefile so when invoking this program it knows from where to get the builder
+binary and the script.
+
+Then configure normally Buildroot, something like 'make menuconfig'.
+
+Finally from Buildroot's build path invoke the paralell builder:
+
+$ make pbuilder
 
 ================================================================================
 TODO
 ================================================================================
 
+Add support for BR2_EXTERNAL
 
 ================================================================================
 Known bugs
