README: This file now contains useful and organized info

--- a/INSTALL
+++ b/INSTALL
@@ -1,16 +1,1 @@
-================================================================================
-Requirements
-================================================================================
-
-- glib-2
-
-================================================================================
-Building
-================================================================================
-
-./autogen.sh
-./configure
-make
-sudo make install
-
-
+See README file.
